# rpotlight

./: .gitignore  Cargo.toml  Makefile  build.rs
proto/: communication.proto
scripts/: mongo-script.js
src/: cli.rs  db.rs  discoverer.rs  fts.rs  lib.rs  migrations.rs  model.rs  parse.rs  read.rs  registry.rs  twoway.rs  watcher.rs
