[package]
name = "rplotlight"
version = "0.1.0"
edition = "2021"

[lib]
name = "rplot"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.68"
syn = {version = "1.0.107", features=["full", "extra-traits"]}
walkdir = "2.3.2"
tonic = "0.8.3"
prost = "0.11.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.8"
