[package]
name = "rpotlight"
version = "0.1.0"
edition = "2021"

[lib]
name = "rpot"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.68"
syn = {version = "1.0.107", features=["full", "extra-traits"]}
walkdir = "2.3.2"
tonic = "0.8.3"
prost = "0.11.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3"
rust-stemmers = "1.2.0"
clap = { version = "4.0.32", features = ["derive"] }
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.7.1"

[build-dependencies]
tonic-build = "0.8"
